# fem_itmo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Builder.cpp  Builder.h  Color.cpp  Color.h  Config.cpp  Config.h  DMat.cpp  DMat.h  FE.cpp  FE.h  Generator.cpp  Generator.h  Grid.cpp  Grid.h  Line.cpp  Line.h  MSG.cpp  MSG.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Point.cpp  Point.h  Shader.h  Utils.h  Window.cpp  Window.h  main.cpp
